[tool.poetry]
name = "clion"
version = "0.1.0"
description = "Minimalistic library for building CLI applications"
authors = ["Yevhen Shymotiuk <yshym@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.3.3"
pylint = "^2.12.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
